sandbox/output
Anagrams.java:19: error: ')' expected
                             s.substring(2) + Anagrams.of("ab").get(1));
                                                                       ^
1 error
